Carousel Pattern and Example: Link pattern to example and update index
In carousel design pattern section:
1. Add link to review issue 970.
2. Add paragraph under example heading that includes a link to the example page and a description of the example.

On auto-rotating image carousel Example page, update link to review issue to refer to issue 971.

Run reference-tables node script to update index of examples, so it includes carousel example.

--- a/examples/index.html
+++ b/examples/index.html
@@ -48,7 +48,7 @@
 </tr><tr>
   <td><code>button</code></td>
   <td>    <ul>      <li><a href="../examples//button/button.html">Button  </a></li>
-      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
+      <li><a href="../examples//carousel/carousel-1/carousel-1.html">Auto-Rotating Image Carousel  </a></li></ul></td>
 </tr><tr>
   <td><code>checkbox</code></td>
   <td>    <ul>      <li><a href="../examples//checkbox/checkbox-1/checkbox-1.html">Checkbox  (Two State) </a></li>
@@ -78,14 +78,15 @@
 </tr><tr>
   <td><code>grid</code></td>
   <td>    <ul>      <li><a href="../examples//combobox/aria1.1pattern/grid-combo.html">ARIA 1.1 Combobox with Grid Popup  </a></li>
-      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
-      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li></ul></td>
+      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li></ul></td>
 </tr><tr>
   <td><code>gridcell</code></td>
   <td>    <a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></td>
 </tr><tr>
   <td><code>group</code></td>
-  <td>    <ul>      <li><a href="../examples//checkbox/checkbox-1/checkbox-1.html">Checkbox  (Two State) </a></li>
+  <td>    <ul>      <li><a href="../examples//carousel/carousel-1/carousel-1.html">Auto-Rotating Image Carousel  </a></li>
+      <li><a href="../examples//checkbox/checkbox-1/checkbox-1.html">Checkbox  (Two State) </a></li>
       <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li>
       <li><a href="../examples//treeview/treeview-2/treeview-2a.html">Navigation Treeview  Using Computed Properties </a></li>
       <li><a href="../examples//treeview/treeview-2/treeview-2b.html">Navigation Treeview  Using Declared Properties </a></li></ul></td>
@@ -110,7 +111,8 @@
       <li><a href="../examples//menu-button/menu-button-actions.html">Actions Menu Button  Using element.focus() </a></li>
       <li><a href="../examples//menu-button/menu-button-links.html">Navigation Menu Button  </a></li>
       <li><a href="../examples//menubar/menubar-1/menubar-1.html">Navigation Menubar  </a></li>
-      <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li></ul></td>
+      <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>menubar</code></td>
   <td>    <ul>      <li><a href="../examples//menubar/menubar-1/menubar-1.html">Navigation Menubar  </a></li>
@@ -126,7 +128,8 @@
   <td>    <a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></td>
 </tr><tr>
   <td><code>menuitemradio</code></td>
-  <td>    <a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></td>
+  <td>    <ul>      <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>navigation</code></td>
   <td>    <a href="../examples/landmarks/navigation.html">Navigation Landmark</a></td>
@@ -143,11 +146,13 @@
 </tr><tr>
   <td><code>radio</code></td>
   <td>    <ul>      <li><a href="../examples//radio/radio-1/radio-1.html">Radio Group  Using Roving tabindex </a></li>
-      <li><a href="../examples//radio/radio-2/radio-2.html">Radio Group  Using aria-activedescendant </a></li></ul></td>
+      <li><a href="../examples//radio/radio-2/radio-2.html">Radio Group  Using aria-activedescendant </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>radiogroup</code></td>
   <td>    <ul>      <li><a href="../examples//radio/radio-1/radio-1.html">Radio Group  Using Roving tabindex </a></li>
-      <li><a href="../examples//radio/radio-2/radio-2.html">Radio Group  Using aria-activedescendant </a></li></ul></td>
+      <li><a href="../examples//radio/radio-2/radio-2.html">Radio Group  Using aria-activedescendant </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>region</code></td>
   <td>    <a href="../examples/landmarks/region.html">Region Landmark</a></td>
@@ -171,6 +176,9 @@
   <td>    <ul>      <li><a href="../examples//slider/multithumb-slider.html">Horizontal Multi-Thumb Slider  </a></li>
       <li><a href="../examples//slider/slider-1.html">Horizontal Slider  </a></li>
       <li><a href="../examples//slider/slider-2.html">Slider  with aria-orientation and aria-valuetext </a></li></ul></td>
+</tr><tr>
+  <td><code>spinbutton</code></td>
+  <td>    <a href="../examples//toolbar/toolbar.html">Toolbar  </a></td>
 </tr><tr>
   <td><code>tab</code></td>
   <td>    <ul>      <li><a href="../examples//tabs/tabs-1/tabs.html"> Tabs with Automatic Activation </a></li>
@@ -205,6 +213,7 @@
       <li><a href="../examples//treeview/treeview-2/treeview-2a.html">Navigation Treeview  Using Computed Properties </a></li>
       <li><a href="../examples//treeview/treeview-2/treeview-2b.html">Navigation Treeview  Using Declared Properties </a></li></ul></td>
 </tr>
+
         </tbody>
       </table>
 
@@ -248,7 +257,8 @@
       <li><a href="../examples//checkbox/checkbox-2/checkbox-2.html">Checkbox  (Mixed-State) </a></li>
       <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li>
       <li><a href="../examples//radio/radio-1/radio-1.html">Radio Group  Using Roving tabindex </a></li>
-      <li><a href="../examples//radio/radio-2/radio-2.html">Radio Group  Using aria-activedescendant </a></li></ul></td>
+      <li><a href="../examples//radio/radio-2/radio-2.html">Radio Group  Using aria-activedescendant </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-colcount</code></td>
   <td><a href="../examples//grid/dataGrids.html">Data Grid  </a></td>
@@ -264,7 +274,8 @@
       <li><a href="../examples//menu-button/menu-button-actions.html">Actions Menu Button  Using element.focus() </a></li>
       <li><a href="../examples//menu-button/menu-button-links.html">Navigation Menu Button  </a></li>
       <li><a href="../examples//tabs/tabs-1/tabs.html"> Tabs with Automatic Activation </a></li>
-      <li><a href="../examples//tabs/tabs-2/tabs.html"> Tabs with Manual Activation </a></li></ul></td>
+      <li><a href="../examples//tabs/tabs-2/tabs.html"> Tabs with Manual Activation </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-describedby</code></td>
   <td>    <ul>      <li><a href="../examples//dialog-modal/alertdialog.html">Alert Dialog  </a></li>
@@ -274,7 +285,9 @@
 </tr><tr>
   <td><code>aria-disabled</code></td>
   <td>    <ul>      <li><a href="../examples//accordion/accordion.html">Accordion  </a></li>
-      <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li></ul></td>
+      <li><a href="../examples//carousel/carousel-1/carousel-1.html">Auto-Rotating Image Carousel  </a></li>
+      <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-expanded</code></td>
   <td>    <ul>      <li><a href="../examples//accordion/accordion.html">Accordion  </a></li>
@@ -291,6 +304,7 @@
       <li><a href="../examples//menu-button/menu-button-links.html">Navigation Menu Button  </a></li>
       <li><a href="../examples//menubar/menubar-1/menubar-1.html">Navigation Menubar  </a></li>
       <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li>
       <li><a href="../examples//treegrid/treegrid-1.html">Treegrid Email Inbox  </a></li>
       <li><a href="../examples//treeview/treeview-1/treeview-1a.html">File Directory Treeview  Using Computed Properties </a></li>
       <li><a href="../examples//treeview/treeview-1/treeview-1b.html">File Directory Treeview  Using Declared Properties </a></li>
@@ -308,13 +322,15 @@
       <li><a href="../examples//menu-button/menu-button-actions.html">Actions Menu Button  Using element.focus() </a></li>
       <li><a href="../examples//menu-button/menu-button-links.html">Navigation Menu Button  </a></li>
       <li><a href="../examples//menubar/menubar-1/menubar-1.html">Navigation Menubar  </a></li>
-      <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li></ul></td>
+      <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-hidden</code></td>
   <td><a href="../examples//dialog-modal/alertdialog.html">Alert Dialog  </a></td>
 </tr><tr>
   <td><code>aria-label</code></td>
-  <td>    <ul>      <li><a href="../examples//checkbox/checkbox-1/checkbox-1.html">Checkbox  (Two State) </a></li>
+  <td>    <ul>      <li><a href="../examples//carousel/carousel-1/carousel-1.html">Auto-Rotating Image Carousel  </a></li>
+      <li><a href="../examples//checkbox/checkbox-1/checkbox-1.html">Checkbox  (Two State) </a></li>
       <li><a href="../examples//combobox/aria1.0pattern/combobox-autocomplete-both.html">Legacy ARIA 1.0 Combobox With Both List and Inline Autocomplete  </a></li>
       <li><a href="../examples//combobox/aria1.0pattern/combobox-autocomplete-list.html">Legacy ARIA 1.0 Combobox With List Autocomplete  </a></li>
       <li><a href="../examples//combobox/aria1.0pattern/combobox-autocomplete-none.html">Legacy ARIA 1.0 Combobox without Autocomplete  </a></li>
@@ -323,8 +339,8 @@
       <li><a href="../examples//dialog-modal/alertdialog.html">Alert Dialog  </a></li>
       <li><a href="../examples//dialog-modal/dialog.html">Modal Dialog  </a></li>
       <li><a href="../examples//feed/feed.html">Feed  </a></li>
-      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
       <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
       <li><a href="../examples//listbox/listbox-collapsible.html">Collapsible Dropdown Listbox  </a></li>
       <li><a href="../examples//listbox/listbox-rearrangeable.html"> Listboxes with Rearrangeable Options </a></li>
       <li><a href="../examples//listbox/listbox-scrollable.html">Scrollable Listbox  </a></li>
@@ -352,8 +368,8 @@
       <li><a href="../examples//dialog-modal/alertdialog.html">Alert Dialog  </a></li>
       <li><a href="../examples//dialog-modal/dialog.html">Modal Dialog  </a></li>
       <li><a href="../examples//feed/feed.html">Feed  </a></li>
-      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
       <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
       <li><a href="../examples//listbox/listbox-collapsible.html">Collapsible Dropdown Listbox  </a></li>
       <li><a href="../examples//listbox/listbox-rearrangeable.html"> Listboxes with Rearrangeable Options </a></li>
       <li><a href="../examples//listbox/listbox-scrollable.html">Scrollable Listbox  </a></li>
@@ -382,7 +398,8 @@
       <li><a href="../examples//treeview/treeview-2/treeview-2b.html">Navigation Treeview  Using Declared Properties </a></li></ul></td>
 </tr><tr>
   <td><code>aria-live</code></td>
-  <td><a href="../examples//alert/alert.html">Alert  </a></td>
+  <td>    <ul>      <li><a href="../examples//alert/alert.html">Alert  </a></li>
+      <li><a href="../examples//carousel/carousel-1/carousel-1.html">Auto-Rotating Image Carousel  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-modal</code></td>
   <td><a href="../examples//dialog-modal/alertdialog.html">Alert Dialog  </a></td>
@@ -408,15 +425,19 @@
       <li><a href="../examples//treeview/treeview-2/treeview-2b.html">Navigation Treeview  Using Declared Properties </a></li></ul></td>
 </tr><tr>
   <td><code>aria-pressed</code></td>
-  <td><a href="../examples//button/button.html">Button  </a></td>
+  <td>    <ul>      <li><a href="../examples//button/button.html">Button  </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
+</tr><tr>
+  <td><code>aria-roledescription</code></td>
+  <td><a href="../examples//carousel/carousel-1/carousel-1.html">Auto-Rotating Image Carousel  </a></td>
 </tr><tr>
   <td><code>aria-rowcount</code></td>
-  <td>    <ul>      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
-      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li></ul></td>
+  <td>    <ul>      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-rowindex</code></td>
-  <td>    <ul>      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
-      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li></ul></td>
+  <td>    <ul>      <li><a href="../examples//grid/dataGrids.html">Data Grid  </a></li>
+      <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-selected</code></td>
   <td>    <ul>      <li><a href="../examples//combobox/aria1.1pattern/grid-combo.html">ARIA 1.1 Combobox with Grid Popup  </a></li>
@@ -441,17 +462,21 @@
   <td><code>aria-valuemin</code></td>
   <td>    <ul>      <li><a href="../examples//slider/multithumb-slider.html">Horizontal Multi-Thumb Slider  </a></li>
       <li><a href="../examples//slider/slider-1.html">Horizontal Slider  </a></li>
-      <li><a href="../examples//slider/slider-2.html">Slider  with aria-orientation and aria-valuetext </a></li></ul></td>
+      <li><a href="../examples//slider/slider-2.html">Slider  with aria-orientation and aria-valuetext </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-valuenow</code></td>
   <td>    <ul>      <li><a href="../examples//slider/multithumb-slider.html">Horizontal Multi-Thumb Slider  </a></li>
       <li><a href="../examples//slider/slider-1.html">Horizontal Slider  </a></li>
-      <li><a href="../examples//slider/slider-2.html">Slider  with aria-orientation and aria-valuetext </a></li></ul></td>
+      <li><a href="../examples//slider/slider-2.html">Slider  with aria-orientation and aria-valuetext </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
 </tr><tr>
   <td><code>aria-valuetext</code></td>
   <td>    <ul>      <li><a href="../examples//slider/multithumb-slider.html">Horizontal Multi-Thumb Slider  </a></li>
-      <li><a href="../examples//slider/slider-2.html">Slider  with aria-orientation and aria-valuetext </a></li></ul></td>
-</tr>        </tbody>
+      <li><a href="../examples//slider/slider-2.html">Slider  with aria-orientation and aria-valuetext </a></li>
+      <li><a href="../examples//toolbar/toolbar.html">Toolbar  </a></li></ul></td>
+</tr>
+        </tbody>
       </table>
 
     </section>
