--- a/aria-practices.html
+++ b/aria-practices.html
@@ -481,6 +481,11 @@
     <section class="widget" id="carousel">
       <h3>Carousel (Slide Show or Image Rotator)</h3>
       <p>
+        <strong>NOTE:</strong> This is a new pattern as of the January 2019 release of WAI-ARIA Authoring Practices 1.1.
+        Please provide feedback in
+        <a href="https://github.com/w3c/aria-practices/issues/970">issue 970.</a>
+      </p>
+      <p>
         A carousel presents a set of items, referred to as slides, by sequentially displaying a subset of one or more slides.
         Typically, one slide is displayed at a time, and users can activate a next or previous slide control that hides the current slide and &quot;rotates&quot; the next or previous slide into view.
         In some implementations, rotation automatically starts when the page loads, and it may also automatically stop once all the slides have been displayed.
@@ -507,8 +512,7 @@
       <section class="notoc">
         <h4>Example</h4>
         <p>
-          Development of an example for this pattern is tracked by 
-          <a href="https://github.com/w3c/aria-practices/issues/458">issue 458.</a>
+          <a href="examples/carousel/carousel-1/carousel-1.html">Auto-Rotating Image Carousel Example:</a> A basic image carousel that demonstrates the accessibility features necessary for carousels that rotate automatically on page load. 
         </p>
       </section>
       
