--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4991,8 +4991,22 @@
       <h3>Change History</h3>
       <p>Change history is maintained in a separate version-specific branch.</p>
     </section>
-
-    <div data-include='common/acknowledgements.html' data-include-replace='true'></div>
+    
+    <section id="acknowledgements" class="appendix">
+      <h3>Acknowledgements</h3>
+      <section>
+        <h4>Major Contributors to Version 1.1</h4>
+        <p>
+          While WAI-ARIA Authoring Practices 1.1 is the work of the entire Authoring Practices Task Force and also benefits from many people throughout the open source community who both contribute significant work and provide valuable feedback,
+          special thanks goes to the following people who provided distinctly large portions of the content and code in version 1.1.
+        </p>
+        <ul>
+          <li>Jon Gunderson and Nicholas Hoyt  of the Division of Disability Resources and Education Services at the University of Illinois Urbana/Champaign and the students Max Foltz,  Sulaiman Sanaullah, Mark McCarthy, and Jinyuan Zhou for their contributions to the development of many of the design pattern examples.</li>
+          <li>Valerie Young of Bocoup and her sponsor, Facebook, for development of the example test framework and regressions tests for more than 50 examples.</li>
+        </ul>
+      </section>
+      <div data-include='common/acknowledgements.html' data-include-replace='true'></div>
+    </section>
   </section>
 </body>
 </html>
