Support split acknowledgements and add TF and contributors acknowledgements

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5005,7 +5005,59 @@
           <li>Valerie Young of Bocoup and her sponsor, Facebook, for development of the example test framework and regressions tests for more than 50 examples.</li>
         </ul>
       </section>
-      <div data-include='common/acknowledgements.html' data-include-replace='true'></div>
+    	<section>
+    		<h4>Participants active in the ARIA Authoring Practices Task Force</h4>
+    		<ul>
+    			<li>Ann Abbott (Invited Expert)</li>
+    			<li>Shirisha Belusani (Microsoft Corporation)</li>
+    			<li>Curt Bellew (Oracle)</li>
+    			<li>Michiel Bijl (Invited Expert)</li>
+    			<li>Michael Cooper (W3C)</li>
+    			<li>Bryan Garaventa</li>
+    			<li>Jon Gunderson (University of Illinois at Urbana-Champaign)</li>
+    			<li>Hans Hillen (The Paciello Group, LLC)</li>
+    			<li>Matt King (Facebook)</li>
+    			<li>Jaeun Ku (University of Illinois at Urbana-Champaign)</li>
+    			<li>Aaron Leventhal (Google)</li>
+    			<li>Mark McCarthy (University of Illinois at Urbana-Champaign)</li>
+    			<li>James Nurthen (Adobe)</li>
+    			<li>Evan Yamanishi</li>
+    			<li>Valerie Young</li>
+    		</ul>
+    	</section>
+    	<section>
+    		<h4>Other commenters and contributors to Version 1.1</h4>
+    		<ul>
+    			<li>Vyacheslav Aristov</li>
+    			<li>J. Renée Beach (Facebook)</li>
+    			<li>Kasper Christensen</li>
+    			<li>Gerard K. Cohen</li>
+    			<li>Anne-Gaelle Colom</li>
+    			<li>Kevin Coughlin</li>
+    			<li>Cameron Cundiff</li>
+    			<li>Manish Dahamiwal</li>
+    			<li>Gilmore Davidson</li>
+    			<li>Boris Dušek</li>
+    			<li>Michael Fairchild</li>
+    			<li>Jeremy Felt</li>
+    			<li>Rob Fentress</li>
+    			<li>Geppy</li>
+    			<li>Tatiana Iskandar</li>
+    			<li>Patrick Lauke</li>
+    			<li>Marek Lewandowski</li>
+    			<li>Carolyn MacLeod</li>
+    			<li>Dan Matthew</li>
+    			<li>Shane McCarron</li>
+    			<li>Victor Meyer</li>
+    			<li>Jonathan Neal</li>
+    			<li>Philipp Rudloff</li>
+    			<li>Joseph Scheuhammer</li>
+    			<li>Nick Schonni</li>
+    			<li>thomascorthals</li>
+    			<li>Christopher Tryens</li>
+    		</ul>
+    	</section>
+    	<div data-include='common/acknowledgements/funders.html' data-include-replace='true'></div>
     </section>
   </section>
 </body>
