remove appendices wrapper

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4976,11 +4976,8 @@
     </p>
   </section>
 
-  <section id="appendices" class="appendix">
-    <h2>Appendices</h2>
-    
-    <section id="indexes">
-      <h3>Indexes</h3>
+    <section id="indexes" class="appendix">
+      <h2>Indexes</h2>
       <ul>
         <li><a href="examples/#examples_by_role_label">Design Pattern Examples by Role</a></li>
         <li><a href="examples/#examples_by_props_label">Design Pattern Examples by Properties and States</a> </li>
@@ -4988,14 +4985,14 @@
     </section>
 
     <section id="change_log" class="appendix">
-      <h3>Change History</h3>
+      <h2>Change History</h2>
       <p>Change history is maintained in a separate version-specific branch.</p>
     </section>
     
     <section id="acknowledgements" class="appendix">
-      <h3>Acknowledgements</h3>
+      <h2>Acknowledgements</h2>
       <section>
-        <h4>Major Contributors to Version 1.1</h4>
+        <h3>Major Contributors to Version 1.1</h3>
         <p>
           While WAI-ARIA Authoring Practices 1.1 is the work of the entire Authoring Practices Task Force and also benefits from many people throughout the open source community who both contribute significant work and provide valuable feedback,
           special thanks goes to the following people who provided distinctly large portions of the content and code in version 1.1.
@@ -5006,7 +5003,7 @@
         </ul>
       </section>
     	<section>
-    		<h4>Participants active in the ARIA Authoring Practices Task Force</h4>
+    		<h3>Participants active in the ARIA Authoring Practices Task Force</h3>
     		<ul>
     			<li>Ann Abbott (Invited Expert)</li>
     			<li>Shirisha Belusani (Microsoft Corporation)</li>
@@ -5026,7 +5023,7 @@
     		</ul>
     	</section>
     	<section>
-    		<h4>Other commenters and contributors to Version 1.1</h4>
+    		<h3>Other commenters and contributors to Version 1.1</h3>
     		<ul>
     			<li>Vyacheslav Aristov</li>
     			<li>J. Renée Beach (Facebook)</li>
@@ -5059,6 +5056,5 @@
     	</section>
     	<div data-include='common/acknowledgements/funders.html' data-include-replace='true'></div>
     </section>
-  </section>
 </body>
 </html>
