--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4976,11 +4976,8 @@
     </p>
   </section>
 
-  <section id="appendices" class="appendix">
-    <h2>Appendices</h2>
-    
-    <section id="indexes">
-      <h3>Indexes</h3>
+    <section id="indexes" class="appendix">
+      <h2>Indexes</h2>
       <ul>
         <li><a href="examples/#examples_by_role_label">Design Pattern Examples by Role</a></li>
         <li><a href="examples/#examples_by_props_label">Design Pattern Examples by Properties and States</a> </li>
@@ -4988,11 +4985,76 @@
     </section>
 
     <section id="change_log" class="appendix">
-      <h3>Change History</h3>
+      <h2>Change History</h2>
       <p>Change history is maintained in a separate version-specific branch.</p>
     </section>
-
-    <div data-include='common/acknowledgements.html' data-include-replace='true'></div>
-  </section>
+    
+    <section id="acknowledgements" class="appendix">
+      <h2>Acknowledgements</h2>
+      <section>
+        <h3>Major Contributors to Version 1.1</h3>
+        <p>
+          While WAI-ARIA Authoring Practices 1.1 is the work of the entire Authoring Practices Task Force and also benefits from many people throughout the open source community who both contribute significant work and provide valuable feedback,
+          special thanks goes to the following people who provided distinctly large portions of the content and code in version 1.1.
+        </p>
+        <ul>
+          <li>Jon Gunderson and Nicholas Hoyt  of the Division of Disability Resources and Education Services at the University of Illinois Urbana/Champaign and the students Max Foltz,  Sulaiman Sanaullah, Mark McCarthy, and Jinyuan Zhou for their contributions to the development of many of the design pattern examples.</li>
+          <li>Valerie Young of Bocoup and her sponsor, Facebook, for development of the example test framework and regressions tests for more than 50 examples.</li>
+        </ul>
+      </section>
+    	<section>
+    		<h3>Participants active in the ARIA Authoring Practices Task Force</h3>
+    		<ul>
+    			<li>Ann Abbott (Invited Expert)</li>
+    			<li>Shirisha Belusani (Microsoft Corporation)</li>
+    			<li>Curt Bellew (Oracle)</li>
+    			<li>Michiel Bijl (Invited Expert)</li>
+    			<li>Michael Cooper (W3C)</li>
+    			<li>Bryan Garaventa</li>
+    			<li>Jon Gunderson (University of Illinois at Urbana-Champaign)</li>
+    			<li>Hans Hillen (The Paciello Group, LLC)</li>
+    			<li>Matt King (Facebook)</li>
+    			<li>Jaeun Ku (University of Illinois at Urbana-Champaign)</li>
+    			<li>Aaron Leventhal (Google)</li>
+    			<li>Mark McCarthy (University of Illinois at Urbana-Champaign)</li>
+    			<li>James Nurthen (Adobe)</li>
+    			<li>Evan Yamanishi</li>
+    			<li>Valerie Young</li>
+    		</ul>
+    	</section>
+    	<section>
+    		<h3>Other commenters and contributors to Version 1.1</h3>
+    		<ul>
+    			<li>Vyacheslav Aristov</li>
+    			<li>J. Renée Beach (Facebook)</li>
+    			<li>Kasper Christensen</li>
+    			<li>Gerard K. Cohen</li>
+    			<li>Anne-Gaelle Colom</li>
+    			<li>Kevin Coughlin</li>
+    			<li>Cameron Cundiff</li>
+    			<li>Manish Dahamiwal</li>
+    			<li>Gilmore Davidson</li>
+    			<li>Boris Dušek</li>
+    			<li>Michael Fairchild</li>
+    			<li>Jeremy Felt</li>
+    			<li>Rob Fentress</li>
+    			<li>Geppy</li>
+    			<li>Tatiana Iskandar</li>
+    			<li>Patrick Lauke</li>
+    			<li>Marek Lewandowski</li>
+    			<li>Carolyn MacLeod</li>
+    			<li>Dan Matthew</li>
+    			<li>Shane McCarron</li>
+    			<li>Victor Meyer</li>
+    			<li>Jonathan Neal</li>
+    			<li>Philipp Rudloff</li>
+    			<li>Joseph Scheuhammer</li>
+    			<li>Nick Schonni</li>
+    			<li>thomascorthals</li>
+    			<li>Christopher Tryens</li>
+    		</ul>
+    	</section>
+    	<div data-include='common/acknowledgements/funders.html' data-include-replace='true'></div>
+    </section>
 </body>
 </html>
