adjust affiliations in acknowledgements

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5010,7 +5010,7 @@
     			<li>Curt Bellew (Oracle)</li>
     			<li>Michiel Bijl (Invited Expert)</li>
     			<li>Michael Cooper (W3C)</li>
-    			<li>Bryan Garaventa</li>
+    			<li>Bryan Garaventa (Level Access)</li>
     			<li>Jon Gunderson (University of Illinois at Urbana-Champaign)</li>
     			<li>Hans Hillen (The Paciello Group, LLC)</li>
     			<li>Matt King (Facebook)</li>
@@ -5018,15 +5018,15 @@
     			<li>Aaron Leventhal (Google)</li>
     			<li>Mark McCarthy (University of Illinois at Urbana-Champaign)</li>
     			<li>James Nurthen (Adobe)</li>
-    			<li>Evan Yamanishi</li>
-    			<li>Valerie Young</li>
+    			<li>Evan Yamanishi (W. W. Norton)</li>
+    			<li>Valerie Young (Bocoup)</li>
     		</ul>
     	</section>
     	<section>
     		<h3>Other commenters and contributors to Version 1.1</h3>
     		<ul>
     			<li>Vyacheslav Aristov</li>
-    			<li>J. Renée Beach (Facebook)</li>
+    			<li>J. Renée Beach</li>
     			<li>Kasper Christensen</li>
     			<li>Gerard K. Cohen</li>
     			<li>Anne-Gaelle Colom</li>
