--- a/examples/switch/switch.html
+++ b/examples/switch/switch.html
@@ -30,7 +30,6 @@
   Rename these files to match the name of the example, e.g., checkbox.js if implementing the checkbox design pattern.
 -->
 <link href="css/switch.css" rel="stylesheet">
-<script src="js/switch.js" type="text/javascript"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -64,18 +63,17 @@
           role="switch checkbox"
           aria-checked="false"
           tabindex="0">
+            <span>Larger text</span>
             <span></span>
-            Larger text</div>
-
-        <br>
+        </div>
 
         <div id="switch-colours"
           role="switch checkbox"
           aria-checked="false"
           tabindex="0">
+            <span>Invert colours</span>
             <span></span>
-            Invert colours</div>
-      
+        </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
@@ -215,5 +213,6 @@
     <!--  Update the pattern_ID parameter of this link to refer to the APG design pattern section related to this example.  -->
     <a href="../../#switch">Switch Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
+  <script src="js/switch.js" type="text/javascript"></script>
 </body>
 </html>
