edited description of example

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -37,7 +37,7 @@
     <p>
       The date picker is an example of the <a href="../../#combobox"><code>combobox</code> design pattern</a> that opens a dialog box.
       The date picker dialog box in this example is opened when keyboard focus is moved to the text box and a <kbd>down arrow</kbd> key pressed or clicking on the calendar button.
-      The date picker dialog uses a <code>grid</code> pattern to show and select a date, and buttons for changing the month and year shown in the grid.  For compatibility with mobile browsers, keyboard focus is moved to the calender button when the date picker dialog box closes, rather than the text input control.  In some mobile browsers moving focus to the input control causes the date picker dialog to open automatically, which is avoided by moving focus to the calendar button.  The accessible name for the calender button and the value of the textbox value are updated when the date picker dialog closes.
+      The date picker dialog uses a <code>grid</code> pattern to show and select a date using the cursor keys.  Additional buttons in the dialog box can be used for changing the month and year shown in the grid.
     </p>
   <section>
     <h2 id="ex_label">Example</h2>
