--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -235,7 +235,7 @@
               <td>
                 <ul>
                   <li>Toggles calendar dialog.</li>
-                  <li>NOTE: This button has been removed from <code>tab</code> order of the page by setting <code>tabindex=-1</code>, for compatibility with mobile browsers.</li>
+                  <li>NOTE: This button has been removed from <code>tab</code> order of the page by setting <code>tabindex=-1</code>, since the calendar dialog can be opened using the keyboard in the textbox (e.g. down arrow key).</li>
                 </ul>
               </td>
             </tr>
