--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -314,7 +314,7 @@
             <td>
               <ul>
                 <li>Select the date, close the dialog box and move focus to the date input.</li>
-                <li>The value of the date input is updated with the selected date.</li>
+                <li>The value of the date input is updated with the selected date in the calendar grid.</li>
               </ul>
           </td>
           </tr>
