--- a/aria-practices.html
+++ b/aria-practices.html
@@ -607,8 +607,8 @@
             Optionally, an element wrapping the set of slide elements has <a href="#aria-atomic" class="property-reference">aria-atomic</a> set to <code>false</code>
             and <a href="#aria-live" class="property-reference">aria-live</a> set to:
             <ul>
-              <li><code>off</code>: if the carousel is automatically rotating.
-              <li><code>polite</code>: if the carousel is <strong>NOT</strong> automatically rotating.
+              <li><code>off</code>: if the carousel is automatically rotating.</li>
+              <li><code>polite</code>: if the carousel is <strong>NOT</strong> automatically rotating.</li>
             </ul>
           </li>
         </ul>
@@ -3046,12 +3046,14 @@
               <li>If focus is on a row, moves focus one row down.  If focus is on the last row, focus does not move.</li>
               <li>If focus is on a cell, moves focus one cell down.  If focus is on the bottom cell in the column, focus does not move.</li>
             </ul>
+          </li>
           <li>
             <kbd>Up Arrow</kbd>:
             <ul>
               <li>If focus is on a row, moves focus one row up.  If focus is on the first row, focus does not move.</li>
               <li>If focus is on a cell, moves focus one cell up.  If focus is on the top cell in the column, focus does not move.</li>
             </ul>
+          </li>
           <li>
             <kbd>Page Down</kbd>:
             <ul>
@@ -5087,7 +5089,7 @@
           </li>
           <li>The top of each example page now includes a set of four related links to:
             <ul>
-              <li><Q>Browser and Assistive Technology Support</Q> section of <q>Read Me First</q></li>
+              <li><q>Browser and Assistive Technology Support</q> section of <q>Read Me First</q></li>
               <li><q>Report Issue</q> page in the Github repository</li>
               <li><q>Related Issues</q> listed in the Github project for the example</li>
               <li><q>Design Pattern</q> section that applies to the example</li>
